# avito-retriever

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: baseline_bm25f.yaml  fixed_submission.yaml  full_rerank.yaml  hybrid_knn.yaml
data/: README.md
description/: solution.md
output/jupyter-notebook/: 00_data_html_ocr_audit.ipynb  01_sentencepiece_bm25f_search.ipynb  02_dense_knn_fusion_search.ipynb  03_reranker_comparison.ipynb  04_ocr_ablation.ipynb  05_final_architecture_significance.ipynb  06_final_fit_submission.ipynb  README.md
src/avito_retriever/: __init__.py  config.py  contracts.py
src/avito_retriever/cli/: __init__.py  compare.py  evaluate.py  run.py  validate_submission.py
src/avito_retriever/data/: io.py
src/avito_retriever/evaluation/: __init__.py  cv.py  metrics.py  multiple.py  selection.py  statistics.py
src/avito_retriever/experiments/: __init__.py  bundle.py  notebook.py
src/avito_retriever/fusion/: __init__.py  rrf.py
src/avito_retriever/pipeline/: __init__.py  baseline.py  final.py  fixed.py
src/avito_retriever/preprocessing/: __init__.py  html.py  images.py  normalize.py  ocr.py
src/avito_retriever/reranking/: __init__.py  bi_encoder.py  cross_encoder.py
src/avito_retriever/retrieval/: __init__.py  bm25.py  (+3 more)
tests/: test_bm25f.py  test_bundle.py  test_fixed_answer.py  test_fusion.py  test_html_parser.py  test_images.py  test_metrics.py  test_selection.py  test_statistics.py  test_submission.py
tools/: build_research_notebooks.py  collect_results.py  make_answer.py  run_notebooks.py
(+4 files in other folders)
